--- a/web_app/app/static/styles/theme.css
+++ b/web_app/app/static/styles/theme.css
@@ -497,6 +497,15 @@ html, body {
   color: white;
 }
 
+/* Ghost booking styling - light grey, semi-transparent */
+.status-ghost {
+  background-color: #f0f0f0 !important;
+  color: #999999 !important;
+  opacity: 0.7;
+  border: 1px dashed #cccccc !important;
+  font-style: italic;
+}
+
 .status-unconfirmed {
   background-color: #FFC000 !important;
   color: black;
